# finch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.claude/: settings.json.proposed
.claude/rules/: hexagonal.md  infra-cdk.md  local-dev.md  streaming-flink.md  tdd-testing.md
.claude/skills/new-adapter/: SKILL.md
.claude/skills/tdd/: SKILL.md
.devcontainer/: devcontainer.json
docker/: dev.Dockerfile
docs/: architecture.md
finch/adapters/inbound/: __init__.py
finch/adapters/outbound/: __init__.py
finch/adapters/streaming/: __init__.py
finch/application/: __init__.py
finch/domain/: __init__.py
finch/infrastructure/: __init__.py
finch/ports/: __init__.py
infra/: app.py  cdk.json
