[project]
name = "finch"
version = "0.0.0"
description = "Real-time connection guardian for UK rail (Darwin Push Port)"
requires-python = ">=3.12,<3.13"  # matches Amazon MSF Flink 2.2 default Python (3.12)
license = "AGPL-3.0-or-later"
dependencies = [
    "pydantic>=2.7",
]

# Adapter/runtime deps are grouped so the pure domain stays import-light.
[project.optional-dependencies]
serving = ["fastapi>=0.111", "mangum>=0.18"]
messaging = ["confluent-kafka>=2.4", "stomp-py>=8.1"]
aws = ["boto3>=1.34"]
streaming = ["apache-flink==2.2.0"]  # pinned to the Amazon MSF FLINK-2_2 runtime
infra = ["aws-cdk-lib>=2.150", "constructs>=10.3"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[kafka]>=4.5",
    "moto[all]>=5.0",
    "polyfactory>=2.16",
    "boto3-stubs[essential]>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finch"]

[tool.ruff]
src = ["finch", "tests"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TID", "RUF"]

# Enforce the dependency rule mechanically: the pure domain may not import infrastructure.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"boto3".msg = "Domain/application must depend on a port, not boto3. Import in adapters only."
"fastapi".msg = "No web framework inside domain/application. Controllers live in adapters/inbound."
"pyflink".msg = "No PyFlink inside domain/application. Operators live in adapters/streaming."
"stomp".msg = "No STOMP client inside domain/application. Use the inbound bridge adapter."
"confluent_kafka".msg = "No Kafka client inside domain/application. Use a port + adapter."

[tool.ruff.lint.per-file-ignores]
"finch/adapters/**" = ["TID251"]   # adapters are allowed to import infrastructure libs
"finch/infrastructure/**" = ["TID251"]
"infra/**" = ["TID251"]
"tests/**" = ["TID251"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["finch", "tests", "infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that touch real infra (Testcontainers / moto / localstack). Excluded from the fast suite.",
]
addopts = "--strict-markers"
